--- a/views/new.erb
+++ b/views/new.erb
@@ -1,5 +1,7 @@
-<form action="/bookmarks" method="post">
-  <input type="text" name="url" placeholder="URL" />
-  <input type="text" name="title" placeholder="Title" />
-  <input type="submit" value="Submit" />
-</form>
+<div align="center">
+  <form action=/add_bookmark method='post'>
+    <input type="text" name="url" placeholder="Enter URL here"><br>
+    <input type="text" name="title" placeholder="Enter title here"><br>
+    <button type="submit" value="Submit">create Bookmark</button>
+  </form>
+</div>
