added update bookmark function

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,4 +15,11 @@
   <button type="submit" value="Submit">delete bookmark</button>
 </form>
 
+<form action=/update_bookmark method='post'>
+  <input type="text" name="old_title" placeholder="Enter title of bookmark to be updated"><br>
+  <input type="text" name="update_title" placeholder="Enter new title of bookmark"><br>
+  <input type="text" name="update_url" placeholder="Enter new URL of bookmark"><br>
+  <button type="submit" value="Submit">update bookmark</button>
+</form>
+
 </div>
