added URL validation flash notice

--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -15,3 +15,5 @@
     <button type="submit" value="Submit">back</button>
   </form>
 </div>
+
+<center><font color="red"><%= flash[:notice] %></font></center>
